# Suigetsu

./: .gitignore  2  CMakeLists.txt  README.md  a.out  asm_comp_emu_tst.sh  asm_comp_tst.sh  tester.py
.cache/clangd/index/: decoder.cc.220924954C524DAE.idx  decoder.cc.B188753697ECF575.idx  decoder.cc.DC9F0F3191E8A86E.idx  decoder.h.6D579E805AE43BBD.idx  decoder.h.AC35A64C8FEC231F.idx  decoder.h.BA3F28833A6F58B9.idx  emulator.cc.247E9A47547F82F6.idx  emulator.cc.3547BD2F18059120.idx  emulator.cc.5B5041603A3BED76.idx  emulator.h.0D71AACE063E2275.idx  emulator.h.1D6491114FB57C88.idx  emulator.h.8DF76C6F855D0A50.idx  instruction.cc.4E37C45C40BB4C51.idx  instruction.cc.D7615D4483588DD4.idx  instruction.cc.DFADDBA5E4FB98F2.idx  instruction.h.B9E8AF816494DA6A.idx  instruction.h.CC8A92DCEA194664.idx  instruction.h.D383866C77BCB6E0.idx  main.cc.6B48A7560E09ED81.idx  main.cc.972EA3B046AF7B2D.idx  main.cc.C7CCFB59F56F2034.idx  mmu.cc.D97C6DC954028198.idx  mmu.cc.E1EE373971415DBF.idx  mmu.cc.FC9D7563A1F489C2.idx  mmu.h.0BD99EF066666519.idx  mmu.h.3B6CC7ACC29FB018.idx  mmu.h.64C1D963A0150368.idx  mmu_test.cc.0014631B6958C15E.idx  mmu_test.cc.0DC50F8C6C6F41FF.idx  mmu_test.cc.56552B64C0D86F61.idx  opcode.h.37145AF1CB8E947A.idx  opcode.h.787904AA7F9347DC.idx  opcode.h.AFCECF39358FD095.idx  registers.cc.626410CC90F50DDA.idx  registers.cc.A798A5A61AC4298D.idx  registers.cc.CA6520F80F998A4F.idx  registers.h.5450DABC363D2E05.idx  registers.h.B20118EB54D00798.idx  registers.h.BF2556E19678ACDB.idx
insn_docs/: insn_dat.py
src/: decoder.cc  decoder.h  emulator.cc  emulator.h  instruction.cc  instruction.h  main.cc  mmu.cc  mmu.h  opcode.h  registers.cc  registers.h
src/notes/: 6_11_2024.md
src/tests/ins/: comp_fib.sh  fib  fib.c  out.txt  (+37 more)
(+262 files in other folders)
